Change weight decay to 1e-5. CV is 0.787

--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -30,35 +30,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "                <script type=\"application/javascript\" id=\"jupyter_black\">\n",
-       "                (function() {\n",
-       "                    if (window.IPython === undefined) {\n",
-       "                        return\n",
-       "                    }\n",
-       "                    var msg = \"WARNING: it looks like you might have loaded \" +\n",
-       "                        \"jupyter_black in a non-lab notebook with \" +\n",
-       "                        \"`is_lab=True`. Please double check, and if \" +\n",
-       "                        \"loading with `%load_ext` please review the README!\"\n",
-       "                    console.log(msg)\n",
-       "                    alert(msg)\n",
-       "                })()\n",
-       "                </script>\n",
-       "                "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -127,16 +101,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7608760528141851, 37824)"
+       "(0.786869090803503, 86210)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,73 +124,73 @@
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
     "\n",
-    "def post_process_for_seg(\n",
-    "    keys: list[str], preds: np.ndarray, score_th: float = 0.01, distance: int = 5000\n",
-    ") -> pl.DataFrame:\n",
-    "    \"\"\"make submission dataframe for segmentation task\n",
+    "# def post_process_for_seg(\n",
+    "#     keys: list[str], preds: np.ndarray, score_th: float = 0.01, distance: int = 5000\n",
+    "# ) -> pl.DataFrame:\n",
+    "#     \"\"\"make submission dataframe for segmentation task\n",
     "\n",
-    "    Args:\n",
-    "        keys (list[str]): list of keys. key is \"{series_id}_{chunk_id}\"\n",
-    "        preds (np.ndarray): (num_series * num_chunks, duration, 2)\n",
-    "        score_th (float, optional): threshold for score. Defaults to 0.5.\n",
+    "#     Args:\n",
+    "#         keys (list[str]): list of keys. key is \"{series_id}_{chunk_id}\"\n",
+    "#         preds (np.ndarray): (num_series * num_chunks, duration, 2)\n",
+    "#         score_th (float, optional): threshold for score. Defaults to 0.5.\n",
     "\n",
-    "    Returns:\n",
-    "        pl.DataFrame: submission dataframe\n",
-    "    \"\"\"\n",
-    "    series_ids = np.array(list(map(lambda x: x.split(\"_\")[0], keys)))\n",
-    "    unique_series_ids = np.unique(series_ids)\n",
+    "#     Returns:\n",
+    "#         pl.DataFrame: submission dataframe\n",
+    "#     \"\"\"\n",
+    "#     series_ids = np.array(list(map(lambda x: x.split(\"_\")[0], keys)))\n",
+    "#     unique_series_ids = np.unique(series_ids)\n",
     "\n",
-    "    records = []\n",
-    "    for series_id in unique_series_ids:\n",
-    "        series_idx = np.where(series_ids == series_id)[0]\n",
-    "        this_series_preds = preds[series_idx].reshape(-1, 2)\n",
+    "#     records = []\n",
+    "#     for series_id in unique_series_ids:\n",
+    "#         series_idx = np.where(series_ids == series_id)[0]\n",
+    "#         this_series_preds = preds[series_idx].reshape(-1, 2)\n",
     "\n",
-    "        for i, event_name in enumerate([\"onset\", \"wakeup\"]):\n",
-    "            this_event_preds = this_series_preds[:, i]\n",
+    "#         for i, event_name in enumerate([\"onset\", \"wakeup\"]):\n",
+    "#             this_event_preds = this_series_preds[:, i]\n",
     "\n",
-    "            onset_candi = torch.Tensor(this_event_preds).to(device)\n",
-    "            window_maxima = torch.nn.functional.max_pool1d_with_indices(\n",
-    "                onset_candi.view(1, -1), distance, 1, padding=distance // 2\n",
-    "            )[1].squeeze()\n",
-    "            candidates = window_maxima.unique()\n",
-    "            steps = (\n",
-    "                candidates[(window_maxima[candidates] == candidates).nonzero()]\n",
-    "                .squeeze(1)\n",
-    "                .cpu()\n",
-    "                .numpy()\n",
-    "            )\n",
-    "            scores = this_event_preds[steps]\n",
+    "#             onset_candi = torch.Tensor(this_event_preds).to(device)\n",
+    "#             window_maxima = torch.nn.functional.max_pool1d_with_indices(\n",
+    "#                 onset_candi.view(1, -1), distance, 1, padding=distance // 2\n",
+    "#             )[1].squeeze()\n",
+    "#             candidates = window_maxima.unique()\n",
+    "#             steps = (\n",
+    "#                 candidates[(window_maxima[candidates] == candidates).nonzero()]\n",
+    "#                 .squeeze(1)\n",
+    "#                 .cpu()\n",
+    "#                 .numpy()\n",
+    "#             )\n",
+    "#             scores = this_event_preds[steps]\n",
     "\n",
-    "            for step, score in zip(steps, scores):\n",
-    "                if score < score_th:\n",
-    "                    continue\n",
+    "#             for step, score in zip(steps, scores):\n",
+    "#                 if score < score_th:\n",
+    "#                     continue\n",
     "\n",
-    "                records.append(\n",
-    "                    {\n",
-    "                        \"series_id\": series_id,\n",
-    "                        \"step\": step,\n",
-    "                        \"event\": event_name,\n",
-    "                        \"score\": score,\n",
-    "                    }\n",
-    "                )\n",
+    "#                 records.append(\n",
+    "#                     {\n",
+    "#                         \"series_id\": series_id,\n",
+    "#                         \"step\": step,\n",
+    "#                         \"event\": event_name,\n",
+    "#                         \"score\": score,\n",
+    "#                     }\n",
+    "#                 )\n",
     "\n",
-    "    if len(records) == 0:  # If there is no prediction, insert dummy\n",
-    "        records.append(\n",
-    "            {\n",
-    "                \"series_id\": series_id,\n",
-    "                \"step\": 0,\n",
-    "                \"event\": \"onset\",\n",
-    "                \"score\": 0,\n",
-    "            }\n",
-    "        )\n",
+    "#     if len(records) == 0:  # If there is no prediction, insert dummy\n",
+    "#         records.append(\n",
+    "#             {\n",
+    "#                 \"series_id\": series_id,\n",
+    "#                 \"step\": 0,\n",
+    "#                 \"event\": \"onset\",\n",
+    "#                 \"score\": 0,\n",
+    "#             }\n",
+    "#         )\n",
     "\n",
-    "    sub_df = pl.DataFrame(records).sort(by=[\"series_id\", \"step\"])\n",
-    "    row_ids = pl.Series(name=\"row_id\", values=np.arange(len(sub_df)))\n",
-    "    sub_df = sub_df.with_columns(row_ids).select([\"row_id\", \"series_id\", \"step\", \"event\", \"score\"])\n",
-    "    return sub_df\n",
+    "#     sub_df = pl.DataFrame(records).sort(by=[\"series_id\", \"step\"])\n",
+    "#     row_ids = pl.Series(name=\"row_id\", values=np.arange(len(sub_df)))\n",
+    "#     sub_df = sub_df.with_columns(row_ids).select([\"row_id\", \"series_id\", \"step\", \"event\", \"score\"])\n",
+    "#     return sub_df\n",
     "\n",
     "\n",
-    "pred_df: pl.DataFrame = post_process_for_seg(keys, preds, score_th=0.0005, distance=60)\n",
+    "pred_df: pl.DataFrame = post_process_for_seg(keys, preds, score_th=0.0001, distance=70)\n",
     "\n",
     "pred_df = pred_df.to_pandas()\n",
     "score = event_detection_ap(gt_df, pred_df)\n",
@@ -226,11 +200,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# (0.7591805558679103, 58452)"
+    "# (0.7690624613584934, 48173)"
    ]
   },
   {
