--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "# Ideas\n",
     "\n",
-    "- scse attention, tanh activation for UnetPP\n",
+    "- fold_10 training\n",
+    "- create sleep label using gaussian\n",
     "\n",
     "- different encoder type + different encoder backbone (MAnet, Linknet, FPN, PSPNet, PAN)\n",
     "\n",
@@ -15,8 +16,6 @@
     "- different optimizer (Lion, Adam, SGD)\n",
     "\n",
     "- offset 25, 30 for your best model\n",
-    "- add weight decay for your best model\n",
-    "- fold_10 training\n",
     "\n",
     "- build an ensemble of models from different folds\n",
     "- use stacking with ensemble\n",
@@ -30,14 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_682956/429059052.py:31: UserWarning: \n",
+      "/tmp/ipykernel_701322/429059052.py:31: UserWarning: \n",
       "The version_base parameter is not specified.\n",
       "Please specify a compatability version level, or None.\n",
       "Will assume defaults for version 1.1\n",
@@ -93,6 +92,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "509\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, l in enumerate(labels):\n",
+    "    if l[l == 1].shape[0] > 0:\n",
+    "        print(i)\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.  , 0.75, 0.25, 0.25, 0.75, 0.75, 0.25], dtype=float32)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = labels[509]\n",
+    "x[x > 0]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -101,16 +141,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.786869090803503, 86210)"
+       "(0.7651811103583283, 65921)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +230,7 @@
     "#     return sub_df\n",
     "\n",
     "\n",
-    "pred_df: pl.DataFrame = post_process_for_seg(keys, preds, score_th=0.0001, distance=70)\n",
+    "pred_df: pl.DataFrame = post_process_for_seg(keys, preds, score_th=0.0002, distance=70)\n",
     "\n",
     "pred_df = pred_df.to_pandas()\n",
     "score = event_detection_ap(gt_df, pred_df)\n",
