Add gaussian sleep

--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -6,8 +6,6 @@
    "source": [
     "# Ideas\n",
     "\n",
-    "- fold_10 training\n",
-    "- create sleep label using gaussian\n",
     "\n",
     "- different encoder type + different encoder backbone (MAnet, Linknet, FPN, PSPNet, PAN)\n",
     "\n",
@@ -29,14 +27,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "                <script type=\"application/javascript\" id=\"jupyter_black\">\n",
+       "                (function() {\n",
+       "                    if (window.IPython === undefined) {\n",
+       "                        return\n",
+       "                    }\n",
+       "                    var msg = \"WARNING: it looks like you might have loaded \" +\n",
+       "                        \"jupyter_black in a non-lab notebook with \" +\n",
+       "                        \"`is_lab=True`. Please double check, and if \" +\n",
+       "                        \"loading with `%load_ext` please review the README!\"\n",
+       "                    console.log(msg)\n",
+       "                    alert(msg)\n",
+       "                })()\n",
+       "                </script>\n",
+       "                "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_701322/429059052.py:31: UserWarning: \n",
+      "/tmp/ipykernel_744905/429059052.py:31: UserWarning: \n",
       "The version_base parameter is not specified.\n",
       "Please specify a compatability version level, or None.\n",
       "Will assume defaults for version 1.1\n",
@@ -89,47 +113,6 @@
     "\n",
     "gt_df = pd.read_csv(Path(cfg.dir.data_dir) / \"train_events.csv\")\n",
     "gt_df = gt_df[gt_df[\"series_id\"].isin(cfg.split.valid_series_ids)].dropna().reset_index(drop=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "509\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i, l in enumerate(labels):\n",
-    "    if l[l == 1].shape[0] > 0:\n",
-    "        print(i)\n",
-    "        break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1.  , 0.75, 0.25, 0.25, 0.75, 0.75, 0.25], dtype=float32)"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x = labels[509]\n",
-    "x[x > 0]"
    ]
   },
   {
