--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -6,19 +6,20 @@
    "source": [
     "# Ideas\n",
     "\n",
+    "- try mirror\n",
     "\n",
     "- different encoder type + different encoder backbone (MAnet, Linknet, FPN, PSPNet, PAN)\n",
     "\n",
     "- different feature extractor type (LSTM, PANN, SpecFeatureExtractor)\n",
     "- different decoder type (MLP, LSTM)\n",
     "- different optimizer (Lion, Adam, SGD)\n",
-    "\n",
     "- offset 25, 30 for your best model\n",
     "\n",
     "- build an ensemble of models from different folds\n",
     "- use stacking with ensemble\n",
     "\n",
     "- DETR2DCNN\n",
+    "- gaussian loss\n",
     "- different mixup / cutmix ratio\n",
     "- gradient_clip_val\n",
     "- different seed (just for fun)\n",
@@ -27,40 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "                <script type=\"application/javascript\" id=\"jupyter_black\">\n",
-       "                (function() {\n",
-       "                    if (window.IPython === undefined) {\n",
-       "                        return\n",
-       "                    }\n",
-       "                    var msg = \"WARNING: it looks like you might have loaded \" +\n",
-       "                        \"jupyter_black in a non-lab notebook with \" +\n",
-       "                        \"`is_lab=True`. Please double check, and if \" +\n",
-       "                        \"loading with `%load_ext` please review the README!\"\n",
-       "                    console.log(msg)\n",
-       "                    alert(msg)\n",
-       "                })()\n",
-       "                </script>\n",
-       "                "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_744905/429059052.py:31: UserWarning: \n",
+      "/tmp/ipykernel_744905/3449505887.py:31: UserWarning: \n",
       "The version_base parameter is not specified.\n",
       "Please specify a compatability version level, or None.\n",
       "Will assume defaults for version 1.1\n",
@@ -87,7 +62,7 @@
     "jupyter_black.load()\n",
     "plt.style.use(\"ggplot\")\n",
     "\n",
-    "EXP_NAME = \"transformer_dur_8640_sigma_12_weight_decay_1e-5\"\n",
+    "EXP_NAME = \"transformer_dur_8640_sigma_12_2xdur\"\n",
     "RUN_NAME = \"single\"\n",
     "RESULT_DIR = Path(\"../output/train\") / EXP_NAME / RUN_NAME\n",
     "TYPE = \"_score\"  # '_score'\n",
@@ -130,7 +105,7 @@
     {
      "data": {
       "text/plain": [
-       "(0.7651811103583283, 65921)"
+       "(0.780626146218862, 80245)"
       ]
      },
      "execution_count": 5,
@@ -213,7 +188,7 @@
     "#     return sub_df\n",
     "\n",
     "\n",
-    "pred_df: pl.DataFrame = post_process_for_seg(keys, preds, score_th=0.0002, distance=70)\n",
+    "pred_df: pl.DataFrame = post_process_for_seg(keys, preds, score_th=0.0001, distance=70)\n",
     "\n",
     "pred_df = pred_df.to_pandas()\n",
     "score = event_detection_ap(gt_df, pred_df)\n",
