--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -7,7 +7,6 @@
     "# Ideas\n",
     "\n",
     "- try mirror\n",
-    "\n",
     "- different encoder type + different encoder backbone (MAnet, Linknet, FPN, PSPNet, PAN)\n",
     "\n",
     "- different feature extractor type (LSTM, PANN, SpecFeatureExtractor)\n",
@@ -28,14 +27,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_744905/3449505887.py:31: UserWarning: \n",
+      "/tmp/ipykernel_876630/3449505887.py:31: UserWarning: \n",
       "The version_base parameter is not specified.\n",
       "Please specify a compatability version level, or None.\n",
       "Will assume defaults for version 1.1\n",
@@ -99,16 +98,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ValueError during mean_ap calculation\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "(0.780626146218862, 80245)"
+       "(0, 50686)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +194,7 @@
     "#     return sub_df\n",
     "\n",
     "\n",
-    "pred_df: pl.DataFrame = post_process_for_seg(keys, preds, score_th=0.0001, distance=70)\n",
+    "pred_df: pl.DataFrame = post_process_for_seg(keys, preds, score_th=0.0002, distance=70)\n",
     "\n",
     "pred_df = pred_df.to_pandas()\n",
     "score = event_detection_ap(gt_df, pred_df)\n",
