--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -7,11 +7,13 @@
     "# Ideas\n",
     "\n",
     "- build an ensemble of models from different folds\n",
+    "- if ensemble works - repeat the same but for duration=17320 and for resnet50 and for both\n",
+    "- also try the same with low WD\n",
     "\n",
     "- different encoder type + different encoder backbone (MAnet, Linknet, FPN, PSPNet, PAN)\n",
-    "\n",
     "- different feature extractor type (LSTM, PANN, SpecFeatureExtractor)\n",
     "- different decoder type (MLP, LSTM)\n",
+    "\n",
     "- different optimizer (Lion, Adam, SGD)\n",
     "- offset 25, 30 for your best model\n",
     "\n",
@@ -27,14 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1059048/1761037087.py:31: UserWarning: \n",
+      "/tmp/ipykernel_1059048/3394172817.py:31: UserWarning: \n",
       "The version_base parameter is not specified.\n",
       "Please specify a compatability version level, or None.\n",
       "Will assume defaults for version 1.1\n",
@@ -61,7 +63,7 @@
     "jupyter_black.load()\n",
     "plt.style.use(\"ggplot\")\n",
     "\n",
-    "EXP_NAME = \"transformer_dur_8640_sigma_12_mirror\"\n",
+    "EXP_NAME = \"transformer_dur_8640_sigma_12\"\n",
     "RUN_NAME = \"single\"\n",
     "RESULT_DIR = Path(\"../output/train\") / EXP_NAME / RUN_NAME\n",
     "TYPE = \"_score\"  # '_score'\n",
