Fix spoiled model weight file

--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -29,14 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1059048/3394172817.py:31: UserWarning: \n",
+      "/tmp/ipykernel_1163068/2381733709.py:35: UserWarning: \n",
       "The version_base parameter is not specified.\n",
       "Please specify a compatability version level, or None.\n",
       "Will assume defaults for version 1.1\n",
@@ -63,10 +63,14 @@
     "jupyter_black.load()\n",
     "plt.style.use(\"ggplot\")\n",
     "\n",
-    "EXP_NAME = \"transformer_dur_8640_sigma_12\"\n",
+    "INFERENCE = True\n",
+    "EXP_NAME = \"transformer_dur_8640_folds\"\n",
     "RUN_NAME = \"single\"\n",
-    "RESULT_DIR = Path(\"../output/train\") / EXP_NAME / RUN_NAME\n",
-    "TYPE = \"_score\"  # '_score'\n",
+    "if INFERENCE:\n",
+    "    RESULT_DIR = Path(\"../output/inference\") / EXP_NAME  # / RUN_NAME\n",
+    "else:\n",
+    "    RESULT_DIR = Path(\"../output/inference\") / EXP_NAME / RUN_NAME\n",
+    "TYPE = \"score\"  # 'score'\n",
     "\n",
     "\n",
     "def load_config(result_dir: Path):\n",
@@ -83,12 +87,20 @@
     "\n",
     "\n",
     "cfg = load_config(RESULT_DIR)\n",
-    "preds = np.load(RESULT_DIR / f\"preds{TYPE}.npy\")\n",
-    "labels = np.load(RESULT_DIR / f\"labels{TYPE}.npy\")\n",
-    "keys = np.load(RESULT_DIR / \"keys.npy\")\n",
-    "\n",
-    "gt_df = pd.read_csv(Path(cfg.dir.data_dir) / \"train_events.csv\")\n",
-    "gt_df = gt_df[gt_df[\"series_id\"].isin(cfg.split.valid_series_ids)].dropna().reset_index(drop=True)"
+    "if INFERENCE:\n",
+    "    preds = np.load(RESULT_DIR / f\"preds.npy\")\n",
+    "    preds_0 = np.load(RESULT_DIR / f\"preds_0.npy\")\n",
+    "    preds_1 = np.load(RESULT_DIR / f\"preds_1.npy\")\n",
+    "    keys_0 = np.load(RESULT_DIR / f\"keys_0.npy\")\n",
+    "    keys_1 = np.load(RESULT_DIR / f\"keys_1.npy\")\n",
+    "else:\n",
+    "    preds = np.load(RESULT_DIR / f\"preds_TYPE.npy\")\n",
+    "    labels = np.load(RESULT_DIR / f\"labels{TYPE}.npy\")\n",
+    "    keys = np.load(RESULT_DIR / \"keys.npy\")\n",
+    "    gt_df = pd.read_csv(Path(cfg.dir.data_dir) / \"train_events.csv\")\n",
+    "    gt_df = (\n",
+    "        gt_df[gt_df[\"series_id\"].isin(cfg.split.valid_series_ids)].dropna().reset_index(drop=True)\n",
+    "    )"
    ]
   },
   {
@@ -100,96 +112,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7635746461996556, 41908)"
+       "(0.8004767232260519, 93756)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import torch\n",
-    "from scipy.signal import find_peaks\n",
-    "from scipy import signal\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "\n",
-    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "\n",
-    "\n",
-    "# def post_process_for_seg(\n",
-    "#     keys: list[str], preds: np.ndarray, score_th: float = 0.01, distance: int = 5000\n",
-    "# ) -> pl.DataFrame:\n",
-    "#     \"\"\"make submission dataframe for segmentation task\n",
-    "\n",
-    "#     Args:\n",
-    "#         keys (list[str]): list of keys. key is \"{series_id}_{chunk_id}\"\n",
-    "#         preds (np.ndarray): (num_series * num_chunks, duration, 2)\n",
-    "#         score_th (float, optional): threshold for score. Defaults to 0.5.\n",
-    "\n",
-    "#     Returns:\n",
-    "#         pl.DataFrame: submission dataframe\n",
-    "#     \"\"\"\n",
-    "#     series_ids = np.array(list(map(lambda x: x.split(\"_\")[0], keys)))\n",
-    "#     unique_series_ids = np.unique(series_ids)\n",
-    "\n",
-    "#     records = []\n",
-    "#     for series_id in unique_series_ids:\n",
-    "#         series_idx = np.where(series_ids == series_id)[0]\n",
-    "#         this_series_preds = preds[series_idx].reshape(-1, 2)\n",
-    "\n",
-    "#         for i, event_name in enumerate([\"onset\", \"wakeup\"]):\n",
-    "#             this_event_preds = this_series_preds[:, i]\n",
-    "\n",
-    "#             onset_candi = torch.Tensor(this_event_preds).to(device)\n",
-    "#             window_maxima = torch.nn.functional.max_pool1d_with_indices(\n",
-    "#                 onset_candi.view(1, -1), distance, 1, padding=distance // 2\n",
-    "#             )[1].squeeze()\n",
-    "#             candidates = window_maxima.unique()\n",
-    "#             steps = (\n",
-    "#                 candidates[(window_maxima[candidates] == candidates).nonzero()]\n",
-    "#                 .squeeze(1)\n",
-    "#                 .cpu()\n",
-    "#                 .numpy()\n",
-    "#             )\n",
-    "#             scores = this_event_preds[steps]\n",
-    "\n",
-    "#             for step, score in zip(steps, scores):\n",
-    "#                 if score < score_th:\n",
-    "#                     continue\n",
-    "\n",
-    "#                 records.append(\n",
-    "#                     {\n",
-    "#                         \"series_id\": series_id,\n",
-    "#                         \"step\": step,\n",
-    "#                         \"event\": event_name,\n",
-    "#                         \"score\": score,\n",
-    "#                     }\n",
-    "#                 )\n",
-    "\n",
-    "#     if len(records) == 0:  # If there is no prediction, insert dummy\n",
-    "#         records.append(\n",
-    "#             {\n",
-    "#                 \"series_id\": series_id,\n",
-    "#                 \"step\": 0,\n",
-    "#                 \"event\": \"onset\",\n",
-    "#                 \"score\": 0,\n",
-    "#             }\n",
-    "#         )\n",
-    "\n",
-    "#     sub_df = pl.DataFrame(records).sort(by=[\"series_id\", \"step\"])\n",
-    "#     row_ids = pl.Series(name=\"row_id\", values=np.arange(len(sub_df)))\n",
-    "#     sub_df = sub_df.with_columns(row_ids).select([\"row_id\", \"series_id\", \"step\", \"event\", \"score\"])\n",
-    "#     return sub_df\n",
-    "\n",
-    "\n",
-    "pred_df: pl.DataFrame = post_process_for_seg(keys, preds, score_th=0.0001, distance=90)\n",
+    "pred_df: pl.DataFrame = post_process_for_seg(keys_0, preds, score_th=0.001, distance=90)\n",
     "\n",
     "pred_df = pred_df.to_pandas()\n",
     "score = event_detection_ap(gt_df, pred_df)\n",
@@ -203,7 +141,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# (0.7690624613584934, 48173)"
+    "# fold_0 (0.8009823826166806, 242509)\n",
+    "# fold_3 "
    ]
   },
   {
@@ -414,6 +353,68 @@
     "\n",
     "\n",
     "plot_random_sample(gt_df, keys, preds, labels, num_chunks=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Inference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Config\n",
+    "BEST_MODEL = \"ensemble\"\n",
+    "FOLD = 0\n",
+    "\n",
+    "DURATION = 8640\n",
+    "DOWNSAMPLE_RATE = 2\n",
+    "PHASE = \"train\"\n",
+    "EXP_NAME = \"transformer_dur_8640_folds\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Global seed set to 42\n",
+      "[5.0GB(+3.9GB):13.4sec] load test dataloader \n",
+      "load weight from /home/alex/Kaggle/DSS/output/train/transformer_dur_8640_folds/fold_0.pth\n",
+      "load weight from /home/alex/Kaggle/DSS/output/train/transformer_dur_8640_folds/fold_3.pth\n",
+      "[5.4GB(+0.4GB):2.5sec] load model \n",
+      "inference: 100%|████████████████████████████| 3733/3733 [03:02<00:00, 20.48it/s]\n",
+      "[6.6GB(+1.1GB):190.8sec] inference \n",
+      "inference: 100%|████████████████████████████| 3733/3733 [03:03<00:00, 20.30it/s]\n",
+      "[7.0GB(+0.5GB):197.9sec] inference \n",
+      "[7.1GB(+0.1GB):2.2sec] make submission \n"
+     ]
+    }
+   ],
+   "source": [
+    "!python -m run.inference\\\n",
+    "    dir=local\\\n",
+    "    model.params.encoder_name=resnet34\\\n",
+    "    model.params.encoder_weights=null\\\n",
+    "    num_workers=2\\\n",
+    "    exp_name=$EXP_NAME\\\n",
+    "    weight.run_name=single\\\n",
+    "    batch_size=4\\\n",
+    "    duration=$DURATION\\\n",
+    "    downsample_rate=$DOWNSAMPLE_RATE\\\n",
+    "    pp.score_th=0.0001\\\n",
+    "    pp.distance=90\\\n",
+    "    phase=$PHASE\\\n",
+    "    best_model=$BEST_MODEL"
    ]
   }
  ],
